Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5975

Qt Creator does not find the QMLViewer of Qt5 builds. "No qmlviewer installed"

    XMLWordPrintable

Details

    • feaea9368bc0e8172276edbc1a6a414fcff22dc2

    Description

      When adding a Qt 5 version to Qt Creator, it does not find the QMLViewer, although it is there.
      OSX, Qt5 master, Qt Creator master.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kkohne Kai Köhne
              portale Alessandro Portale
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes