Find QMLViewer on Mac OS X

Let Qt Creator search for 'QMLViewer.app' instead of 'Qmlviewer.app'
on Mac OS X.

Task-number: QTCREATORBUG-5975
Change-Id: I584af98a1476b994b19b587b934ffc234760a948
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>
Reviewed-by: Daniel Teske <daniel.teske@nokia.com>